--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="/static/favicon.png" />
     <meta name="viewport" content="width=device-width" />
   </head>
-  <body class="h-screen bg-stone-900 p-8 text-white">
+  <body class="h-screen bg-stone-900 px-4 py-2 text-white md:p-8">
     <main id="app"></main>
     <script type="module" src="/src/main.ts"></script>
     <script src="https://unpkg.com/window.nostr.js/dist/window.nostr.js"></script>
